# snake-rust

./: Cargo.toml
src/: lib.rs
www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
www/components/: Canvas.js  Game.js  Snake.js
www/public/: index.html  index.js
